# plugin-spectrum-processor

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg
src/plugin/: __init__.py  exceptions.py  loggers.py  plugin.py  types.py
src/plugin/config/: __init__.py  plugin_config.py  process_config.py
src/plugin/dto/: __init__.py  data.py  filepath.py  meta.py
src/plugin/managers/data_manager/: __init__.py  data_manager.py  exceptions.py  utils.py
src/plugin/managers/data_manager/parsers/: __init__.py  atom_data_parser.py  atom_meta_parser.py  atom_spectra_parser.py  filepath_parser.py
src/plugin/managers/process_manager/: __init__.py  process_manager.py
src/plugin/managers/process_manager/filters/: __init__.py  base_filter.py  scale_filter.py  triangle_filter.py
src/plugin/presentation/: callbacks.py
src/plugin_spectrum_processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
